fix: center icon ios safari

--- a/src/styles/includes/_button-icon.scss
+++ b/src/styles/includes/_button-icon.scss
@@ -6,7 +6,6 @@
 
 	height: $spacing--500;
 	width: $spacing--500;
-	vertical-align: middle;
 	filter: invert(1);
 
 	.is-dark & {
